fixed more problems on mobile still a lot of work to do

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,6 @@ html,body
 
 body {
   font-family: "SF Pro Display", Helvetica Neue;
-  font-size: 1.5rem;
   letter-spacing: 0.05rem;
   -webkit-font-smoothing: antialiased;
   color: black;
@@ -142,7 +141,7 @@ hr {
   line-height: normal;
   font-family: "Moon2.0-Light";
   font-weight: 100;
-  font-size: 3.5rem;
+  font-size: 3rem;
 
 }
 
@@ -159,7 +158,7 @@ hr {
 
 /* Scroll Vector */
 .scroll-down-cue {
-  margin-top: 100px;
+  margin-top: 5%;
   display: block;
   width: 100%;
   text-align: center;
@@ -257,8 +256,26 @@ hr {
   margin: 20px 20px;
 }
 
-
 @media screen and (max-width: 1300px) {
+
+
+
+  h3, h4 {
+    text-align: center;
+  }
+
+
+  .navbar-toggler-icon {
+    height: 1.5rem;
+    width: 1.5rem;
+    margin-top: 5%;
+  }
+
+  .section-intro {
+    margin: 20% auto;
+  }
+}
+@media screen and (max-width: 712px) {
   body {
     font-size: 1rem;
   }
@@ -273,7 +290,7 @@ hr {
 
   /* Title Section */
   .scroll-down-cue img{
-    width: 10%;
+    visibility: hidden;
   }
   .main-header {
     font-size: 2rem;
@@ -285,8 +302,8 @@ hr {
   }
 
   .section-intro {
-    margin-top: 2rem;
-    width: 100%;
+    margin: 20% auto 40%;
+    width: 85%;
     min-width: inherit;
   }
 
